--- a/evaluacion 1 (sucio).ipynb
+++ b/evaluacion 1 (sucio).ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 123,
    "id": "3d2e4920",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<string>, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mFile \u001b[39m\u001b[32m<string>:9\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mdef agregar_producto(self, lista_inventario):\u001b[39m\n                                                 ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class tiendaonline:                            #primero creamos la clase\n",
     "\n",
@@ -23,9 +14,9 @@
     "        \n",
     "        self.inventario = []            #lista de 2 diccionario vacio al principio\n",
     "        self.ventas_totales = 0.0   \n",
-    "                #0.0 ya que es float numero decimal y es con punto, no coma  \n",
-    "     def agregar_producto(self, lista_inventario):\n",
-    "        if producto in lista_inventario:\n",
+    "                                             #0.0 ya que es float numero decimal y es con punto, no coma  \n",
+    "    def agregar_producto(self, lista_inventario):\n",
+    "        if camisa in lista_inventario:\n",
     "            print(\"ese producto esta\")   \n",
     "     \n",
     "\n",
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 82,
    "id": "ebc85405",
    "metadata": {},
    "outputs": [],
@@ -46,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 83,
    "id": "77afd319",
    "metadata": {},
    "outputs": [
@@ -56,13 +47,23 @@
        "{}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mi_tienda.__dict__                #no sale nada porque está vacia ahora mismo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "3c262405",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_tienda.agregar_producto(\"nombre\",\"precio\",\"cantidad\")"
    ]
   },
   {
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 90,
    "id": "852d2627",
    "metadata": {},
    "outputs": [
@@ -114,19 +115,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 91,
    "id": "10e269a8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'tiendaonline' object has no attribute 'agregar_producto'",
+     "ename": "TypeError",
+     "evalue": "tiendaonline.agregar_producto() missing 3 required positional arguments: 'nombre', 'precio', and 'cantidad'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[51]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m mi_tienda=tiendaonline()\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m producto \u001b[38;5;129;01min\u001b[39;00m lista_inventario:\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     \u001b[43mmi_tienda\u001b[49m\u001b[43m.\u001b[49m\u001b[43magregar_producto\u001b[49m()\n",
-      "\u001b[31mAttributeError\u001b[39m: 'tiendaonline' object has no attribute 'agregar_producto'"
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[91]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m mi_tienda=tiendaonline()\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m producto \u001b[38;5;129;01min\u001b[39;00m lista_inventario:\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     \u001b[43mmi_tienda\u001b[49m\u001b[43m.\u001b[49m\u001b[43magregar_producto\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: tiendaonline.agregar_producto() missing 3 required positional arguments: 'nombre', 'precio', and 'cantidad'"
      ]
     }
    ],
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 92,
    "id": "dbc1c3f8",
    "metadata": {},
    "outputs": [
@@ -150,7 +151,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[63]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Pasamos la lista al método\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43minventario\u001b[49m.agregar_productos(lista_inventario)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(inventario.productos)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[92]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Pasamos la lista al método\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43minventario\u001b[49m.agregar_productos(lista_inventario)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(inventario.productos)\n",
       "\u001b[31mNameError\u001b[39m: name 'inventario' is not defined"
      ]
     }
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 93,
    "id": "6b9fff97",
    "metadata": {},
    "outputs": [],
@@ -184,10 +185,240 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8d7f6fb",
+   "id": "f2047704",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class tiendaonline:                            \n",
+    "\n",
+    "\n",
+    "    def _init_(self):      \n",
+    "        \n",
+    "        self.inventario = []        \n",
+    "        self.ventas_totales = 0.0          \n",
+    "    def agregar_producto(self, nombre, precio, cantidad):\n",
+    "        if nombre in self.inventario:\n",
+    "            print(\"ese producto esta\")\n",
+    "        else:\n",
+    "            self.inventario[lista_inventario]= [nombre, precio, cantidad]\n",
+    "            print(f\"el producto {nombre} ha sido añadido\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "f9b89cc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_tienda = tiendaonline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "6aace84f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mi_tienda.__dict__                #no sale nada porque está vacia ahora mismo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afb95e8d",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "eabfbf16",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tiendaonline' object has no attribute 'inventario'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[110]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mmi_tienda\u001b[49m\u001b[43m.\u001b[49m\u001b[43magregar_producto\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mnombre\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mprecio\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcantidad\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[107]\u001b[39m\u001b[32m, line 9\u001b[39m, in \u001b[36mtiendaonline.agregar_producto\u001b[39m\u001b[34m(self, nombre, precio, cantidad)\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34magregar_producto\u001b[39m(\u001b[38;5;28mself\u001b[39m, nombre, precio, cantidad):\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m nombre \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43minventario\u001b[49m:\n\u001b[32m     10\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mese producto esta\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     11\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[31mAttributeError\u001b[39m: 'tiendaonline' object has no attribute 'inventario'"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.agregar_producto(\"nombre\",\"precio\",\"cantidad\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "c8d7f6fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tiendaonline' object has no attribute 'inventario'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[111]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mmi_tienda\u001b[49m\u001b[43m.\u001b[49m\u001b[43magregar_producto\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcamisa\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m40\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[107]\u001b[39m\u001b[32m, line 9\u001b[39m, in \u001b[36mtiendaonline.agregar_producto\u001b[39m\u001b[34m(self, nombre, precio, cantidad)\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34magregar_producto\u001b[39m(\u001b[38;5;28mself\u001b[39m, nombre, precio, cantidad):\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m nombre \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43minventario\u001b[49m:\n\u001b[32m     10\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mese producto esta\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     11\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[31mAttributeError\u001b[39m: 'tiendaonline' object has no attribute 'inventario'"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.agregar_producto(\"camisa\",20,40)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff6cba2d",
+   "metadata": {},
+   "source": [
+    "VAMOS A EMPEZAR DE 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a9a070a",
+   "metadata": {},
+   "source": [
+    "#creamos la clase y ponemos los atributos. el inventario lo piden vacio y las vents tienen que inicar en 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bb6c58fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Tiendaonline:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.inventario = []\n",
+    "        self.ventas_totales = 0.0\n",
+    "    \n",
+    "    def agregar_producto(self, nombre, precio, cantidad):\n",
+    "        producto_nuevo = {'nombre': nombre, 'precio': precio, 'cantidad': cantidad}\n",
+    "        self.inventario.append(producto_nuevo)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "91f7d226",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_tienda=Tiendaonline()    #no me deja poner un nombre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "55bb19ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [], 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mi_tienda.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "db68ac09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_tienda.agregar_producto(\"camisa\",20, 40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8271797b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 40}],\n",
+       " 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mi_tienda.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6b795dc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_tienda.agregar_producto(\"pantalon\",20, 40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "60e5dfaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 40},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40}],\n",
+       " 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mi_tienda.__dict__"
+   ]
   }
  ],
  "metadata": {
