--- a/evaluacion final mod1.ipynb
+++ b/evaluacion final mod1.ipynb
@@ -2,75 +2,111 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "id": "25d9e0a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class tiendaonline:                            \n",
+    "class Tiendaonline:\n",
     "\n",
-    "\n",
-    "    def _init_(self):      \n",
-    "        \n",
-    "        self.inventario = []        \n",
-    "        self.ventas_totales = 0.0          \n",
-    "    def agregar_producto(self, lista_inventario):\n",
-    "        if producto in lista_inventario:\n",
-    "            print(\"ese producto esta\")"
+    "    def __init__(self):\n",
+    "        self.inventario = []\n",
+    "        self.ventas_totales = 0.0\n",
+    "    \n",
+    "    def agregar_producto(self, nombre, precio, cantidad):\n",
+    "        producto_nuevo = {'nombre': nombre, 'precio': precio, 'cantidad': cantidad}\n",
+    "        self.inventario.append(producto_nuevo)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "id": "9718983e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mi_tienda = tiendaonline()  "
+    "mi_tienda = Tiendaonline()  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "17c7cf84",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'nombre': 'camisa', 'precio': 20, 'cantidad': 40}, {'nombre': 'pantalon', 'precio': 30, 'cantidad': 30}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "dict_productos = {\"nombre\":\"camisa\", \"precio\": 20, \"cantidad\": 40}\n",
-    "dict_productos2 = {\"nombre\":\"pantalon\", \"precio\":30, \"cantidad\": 30}\n",
-    "lista_inventario = [dict_productos, dict_productos2]\n",
-    "print(lista_inventario)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0a76a31",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "id": "dda564e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{}"
+       "{'inventario': [], 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mi_tienda.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "36231b1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_tienda.agregar_producto(\"camisa\",20, 40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "62f043cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 40}],\n",
+       " 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mi_tienda.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "60994233",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_tienda.agregar_producto(\"pantalon\",20, 40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "10151210",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 40},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40}],\n",
+       " 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
