--- a/evaluacion 1 (sucio).ipynb
+++ b/evaluacion 1 (sucio).ipynb
@@ -140,42 +140,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "dbc1c3f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'inventario' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[92]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Pasamos la lista al método\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43minventario\u001b[49m.agregar_productos(lista_inventario)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(inventario.productos)\n",
-      "\u001b[31mNameError\u001b[39m: name 'inventario' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Pasamos la lista al método\n",
-    "inventario.agregar_productos(lista_inventario)\n",
-    "print(inventario.productos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "6b9fff97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def agregar_producto(self, lista_inventario):\n",
-    "        if producto in self.lista_inventario:\n",
-    "            print(\"ese producto esta\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "2eb7e3fa",
    "metadata": {},
@@ -267,29 +231,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 111,
-   "id": "c8d7f6fb",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'tiendaonline' object has no attribute 'inventario'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[111]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mmi_tienda\u001b[49m\u001b[43m.\u001b[49m\u001b[43magregar_producto\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcamisa\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m40\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[107]\u001b[39m\u001b[32m, line 9\u001b[39m, in \u001b[36mtiendaonline.agregar_producto\u001b[39m\u001b[34m(self, nombre, precio, cantidad)\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34magregar_producto\u001b[39m(\u001b[38;5;28mself\u001b[39m, nombre, precio, cantidad):\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m nombre \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43minventario\u001b[49m:\n\u001b[32m     10\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mese producto esta\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     11\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[31mAttributeError\u001b[39m: 'tiendaonline' object has no attribute 'inventario'"
-     ]
-    }
-   ],
-   "source": [
-    "mi_tienda.agregar_producto(\"camisa\",20,40)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ff6cba2d",
    "metadata": {},
@@ -307,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "id": "bb6c58fa",
    "metadata": {},
    "outputs": [],
@@ -321,12 +262,20 @@
     "    def agregar_producto(self, nombre, precio, cantidad):\n",
     "        producto_nuevo = {'nombre': nombre, 'precio': precio, 'cantidad': cantidad}\n",
     "        self.inventario.append(producto_nuevo)\n",
+    "        \n",
+    "        for producto in self.inventario:\n",
+    "            if producto['nombre'] == nombre:\n",
+    "                producto['cantidad'] += cantidad\n",
+    "                return\n",
+    "            else:\n",
+    "                nuevo_producto = {'nombre': nombre,'precio': precio,'cantidad': cantidad}\n",
+    "            \n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 72,
    "id": "91f7d226",
    "metadata": {},
    "outputs": [],
@@ -336,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 73,
    "id": "55bb19ae",
    "metadata": {},
    "outputs": [
@@ -346,7 +295,7 @@
        "{'inventario': [], 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 74,
    "id": "db68ac09",
    "metadata": {},
    "outputs": [],
@@ -367,18 +316,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "id": "8271797b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 40}],\n",
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 76,
    "id": "6b795dc8",
    "metadata": {},
    "outputs": [],
@@ -399,25 +348,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 77,
    "id": "60e5dfaa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 40},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40}],\n",
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 80}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mi_tienda.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d64896df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_tienda.agregar_producto(\"pantalon\",20, 40)         #añado otra vez pantalon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03328f9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40}],\n",
+       " 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mi_tienda.__dict__                                     #compruebo que se ha añadido"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78b6c333",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_tienda.agregar_producto(\"falda\",10, 30)                 #añado nuevo producto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17598cff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
+       "  {'nombre': 'falda', 'precio': 10, 'cantidad': 60}],\n",
+       " 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mi_tienda.__dict__                        #compruebo que se ha añadido"
    ]
   }
  ],
