--- a/evaluacion final mod1.ipynb
+++ b/evaluacion final mod1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 80,
    "id": "25d9e0a2",
    "metadata": {},
    "outputs": [],
@@ -16,12 +16,19 @@
     "    def agregar_producto(self, nombre, precio, cantidad):\n",
     "        producto_nuevo = {'nombre': nombre, 'precio': precio, 'cantidad': cantidad}\n",
     "        self.inventario.append(producto_nuevo)\n",
+    "\n",
+    "        for producto in self.inventario:\n",
+    "            if producto['nombre'] == nombre:\n",
+    "                producto['cantidad'] += cantidad\n",
+    "                return\n",
+    "            else:\n",
+    "                nuevo_producto = {'nombre': nombre,'precio': precio,'cantidad': cantidad}\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 81,
    "id": "9718983e",
    "metadata": {},
    "outputs": [],
@@ -31,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 82,
    "id": "dda564e9",
    "metadata": {},
    "outputs": [
@@ -41,7 +48,7 @@
        "{'inventario': [], 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,8 +58,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9aaa0f48",
+   "metadata": {},
+   "source": [
+    "#agregar productos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "id": "36231b1a",
    "metadata": {},
    "outputs": [],
@@ -62,18 +77,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "id": "62f043cc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 40}],\n",
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 73,
    "id": "60994233",
    "metadata": {},
    "outputs": [],
@@ -94,19 +109,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 74,
    "id": "10151210",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 40},\n",
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 80}],\n",
+       " 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mi_tienda.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "56f3a4bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_tienda.agregar_producto(\"pantalon\",20, 40) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8a309b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 160},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
        "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mi_tienda.__dict__            #se me ha añadido el pantalon 2 veces porque le di 2 veces sin querer al play"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "18032fce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_tienda.agregar_producto(\"falda\",10, 30)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "729cb934",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 160},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
+       "  {'nombre': 'falda', 'precio': 10, 'cantidad': 60}],\n",
+       " 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
