--- a/evaluacion 1 (sucio).ipynb
+++ b/evaluacion 1 (sucio).ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 133,
    "id": "bb6c58fa",
    "metadata": {},
    "outputs": [],
@@ -269,13 +269,16 @@
     "                return\n",
     "            else:\n",
     "                nuevo_producto = {'nombre': nombre,'precio': precio,'cantidad': cantidad}\n",
-    "            \n",
+    "                \n",
+    "    def ver_inventario(self):                    #para ver iventario\n",
+    "        for producto in self.inventario:\n",
+    "            print(f\"Nombre: {producto['nombre']},\"f\"Precio: ${producto['precio']},\"f\"Cantidad: {producto['cantidad']}\")\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 134,
    "id": "91f7d226",
    "metadata": {},
    "outputs": [],
@@ -285,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 135,
    "id": "55bb19ae",
    "metadata": {},
    "outputs": [
@@ -295,7 +298,7 @@
        "{'inventario': [], 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 136,
    "id": "db68ac09",
    "metadata": {},
    "outputs": [],
@@ -316,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 137,
    "id": "8271797b",
    "metadata": {},
    "outputs": [
@@ -327,7 +330,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 138,
    "id": "6b795dc8",
    "metadata": {},
    "outputs": [],
@@ -348,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 139,
    "id": "60e5dfaa",
    "metadata": {},
    "outputs": [
@@ -360,7 +363,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "id": "d64896df",
    "metadata": {},
    "outputs": [],
@@ -381,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "id": "03328f9e",
    "metadata": {},
    "outputs": [
@@ -394,7 +397,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "id": "78b6c333",
    "metadata": {},
    "outputs": [],
@@ -415,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "id": "17598cff",
    "metadata": {},
    "outputs": [
@@ -429,13 +432,73 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mi_tienda.__dict__                        #compruebo que se ha añadido"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0aaa5d99",
+   "metadata": {},
+   "source": [
+    "#ver inventario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "41010796",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: camisa,Precio: $20,Cantidad: 80\n",
+      "Nombre: pantalon,Precio: $20,Cantidad: 120\n",
+      "Nombre: pantalon,Precio: $20,Cantidad: 40\n",
+      "Nombre: falda,Precio: $10,Cantidad: 60\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5810070b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tienda' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[109]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m producto \u001b[38;5;129;01min\u001b[39;00m \u001b[43mtienda\u001b[49m.inventrio:\n\u001b[32m      2\u001b[39m     \u001b[38;5;28mprint\u001b[39m(producto)\n",
+      "\u001b[31mNameError\u001b[39m: name 'tienda' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "for producto in tienda.inventario:\n",
+    "    print(producto)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75895236",
+   "metadata": {},
+   "source": [
+    "#buscar producto"
    ]
   }
  ],
