--- a/evaluacion final mod1.ipynb
+++ b/evaluacion final mod1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 94,
    "id": "25d9e0a2",
    "metadata": {},
    "outputs": [],
@@ -23,12 +23,15 @@
     "                return\n",
     "            else:\n",
     "                nuevo_producto = {'nombre': nombre,'precio': precio,'cantidad': cantidad}\n",
+    "    def ver_inventario(self):                    #para ver iventario\n",
+    "        for producto in self.inventario:\n",
+    "            print(f\"Nombre: {producto['nombre']},\"f\"Precio: ${producto['precio']},\"f\"Cantidad: {producto['cantidad']}\")\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 95,
    "id": "9718983e",
    "metadata": {},
    "outputs": [],
@@ -38,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 96,
    "id": "dda564e9",
    "metadata": {},
    "outputs": [
@@ -48,7 +51,7 @@
        "{'inventario': [], 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 97,
    "id": "36231b1a",
    "metadata": {},
    "outputs": [],
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 98,
    "id": "62f043cc",
    "metadata": {},
    "outputs": [
@@ -88,7 +91,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 99,
    "id": "60994233",
    "metadata": {},
    "outputs": [],
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 100,
    "id": "10151210",
    "metadata": {},
    "outputs": [
@@ -121,7 +124,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 101,
    "id": "56f3a4bd",
    "metadata": {},
    "outputs": [],
@@ -142,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "d8a309b0",
    "metadata": {},
    "outputs": [
@@ -150,13 +153,12 @@
      "data": {
       "text/plain": [
        "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 160},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
        "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 103,
    "id": "18032fce",
    "metadata": {},
    "outputs": [],
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 104,
    "id": "729cb934",
    "metadata": {},
    "outputs": [
@@ -185,20 +187,48 @@
      "data": {
       "text/plain": [
        "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 160},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
        "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
        "  {'nombre': 'falda', 'precio': 10, 'cantidad': 60}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mi_tienda.__dict__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0db4308",
+   "metadata": {},
+   "source": [
+    "#ver inventario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "eb1e4418",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: camisa,Precio: $20,Cantidad: 80\n",
+      "Nombre: pantalon,Precio: $20,Cantidad: 120\n",
+      "Nombre: pantalon,Precio: $20,Cantidad: 40\n",
+      "Nombre: falda,Precio: $10,Cantidad: 60\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.ver_inventario()"
    ]
   }
  ],
